# clickhouse-rs

./: Cargo.toml  README.md  rustfmt.toml
examples/: simple.rs
src/: cmd.rs  connection.rs  error_codes.rs  errors.rs  lib.rs
src/binary/: encoder.rs  mod.rs  parser.rs  read_ex.rs
src/io/: block_stream.rs  mod.rs  read_to_end.rs  stream.rs  transport.rs
src/protocols/: mod.rs  protocol_exception.rs  protocol_hello.rs  protocol_query.rs  protocol_type.rs
src/types/: decimal.rs  from_sql.rs  marshal.rs  mod.rs  options.rs  query.rs  result_writer.rs  value.rs  value_ref.rs
src/types/block/: block_info.rs  builder.rs  chunk_iterator.rs  compressed.rs  mod.rs  row.rs
src/types/column/: array.rs  chrono_datetime.rs  chunk.rs  concat.rs  date.rs  datetime64.rs  decimal.rs  enums.rs  factory.rs  fixed_string.rs  ip.rs  list.rs  mod.rs  nullable.rs  numeric.rs  string.rs  string_pool.rs
src/types/column/iter/: mod.rs
