[package]
name = "clickhouse-srv"
version = "0.1.0"
authors = ["sundyli <543950155@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio_io"]
tls = ["tokio-native-tls", "native-tls"]
async_std = ["async-std"]
tokio_io = ["tokio"]


[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.20"
bitflags = "1.2.1"
chrono-tz = "0.5"
futures = "0.3"
url="^2"
byteorder = "^1.3"
hostname = "^0.3"
lz4 = "1.23.2"
combine = "4.2.3"
pin-project = "1.0.4"
uuid = "0.8.1"
tokio-stream = "0.1"
async-trait = "0.1.48"

[dependencies.clickhouse-rs-cityhash-sys]
path = "clickhouse-rs-cityhash-sys"
version = "0.1.2"

[dependencies.chrono]
version = "0.4"
default-features = false
features = [ "std" ]


[dependencies.tokio]
version = "1.0"
default-features = false
features = ["io-util", "time", "net", "sync", "rt-multi-thread", "macros", "rt"]
optional = true

[dependencies.log]
version = "0.4.8"
features = ["std", "serde"]

[dependencies.async-std]
version = "1.6"
optional = true

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.tokio-native-tls]
version = "^0.3"
optional = true

[dev-dependencies]
env_logger = "^0.8"
rand = "^0.8"